[package]
name = "event-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
dotenv = "0.15.0"
fuels = "0.74.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
